# Listbot

./: .claudeignore  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  ListBot.old.py  ListBot.py  README.md  actions.py  config.py  database.py  docker-compose.yml  main.py  messaging.py  plan.md  plan_media_prompts.md  pyproject.toml  refactor.md  requirements.txt  strings.py  text.py
.github/workflows/: docker-publish.yml
Nachricht extrahieren/: extract_telegram.py  import_json.py
db/: __init__.py  connection.py  lists.py  prompts.py  schema.py  settings.py  shares.py  users.py
handlers/: __init__.py  callbacks.py  commands.py  replies.py
i18n/: __init__.py  strings.py
i18n/locales/: en.json
locales/: de.json
migration/: extract_telegram.py  import_json.py
tests/: test_db_smoke.py
ui/: __init__.py  views.py
